# CubicStylization_Cpp

./: .gitignore  README.md
cubicStylization_ImGui/: CMakeLists.txt  main.cpp
cubicStylization_cmd/: CMakeLists.txt  main.cpp
utils/: cube_style_data.h  cube_style_precomputation.cpp  cube_style_precomputation.h  cube_style_single_iteration.cpp  cube_style_single_iteration.h  fit_rotations_l1.cpp  fit_rotations_l1.h  get_bounding_box.cpp  get_bounding_box.h  normalize_unitbox.cpp  normalize_unitbox.h  orthogonal_procrustes.cpp  orthogonal_procrustes.h  shrinkage.cpp  shrinkage.h  speye.cpp  speye.h
